--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3901,53 +3901,110 @@ body {
     padding-left: 30px;
   }
 }
-.cid-rxdRqs4Rc8 {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-image: url("../../../assets/images/anniversary-4-1464x861.jpg");
+.cid-rxdUp6SdIg {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
 }
-.cid-rxdRTuZkXx {
+.cid-rxdUp6SdIg .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-rxdUp6SdIg .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-rxdUp6SdIg .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-rxdUp6SdIg .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-rxdUp6SdIg .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #554346;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-rxdUp6SdIg .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-rxdUp6SdIg .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-rxdUp6SdIg .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-rxdUp6SdIg .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-rxdUwR9XVj {
   padding-top: 90px;
   padding-bottom: 90px;
   background-color: #ffffff;
 }
-.cid-rxdRTuZkXx .socicon-bg-facebook {
+.cid-rxdUwR9XVj .socicon-bg-facebook {
   background: #3e5b98;
   color: #ffffff;
 }
-.cid-rxdRTuZkXx .socicon-bg-twitter {
+.cid-rxdUwR9XVj .socicon-bg-twitter {
   background: #4da7de;
   color: #ffffff;
 }
-.cid-rxdRTuZkXx .socicon-bg-googleplus {
+.cid-rxdUwR9XVj .socicon-bg-googleplus {
   background: #dd4b39;
   color: #ffffff;
 }
-.cid-rxdRTuZkXx .socicon-bg-vkontakte {
+.cid-rxdUwR9XVj .socicon-bg-vkontakte {
   background: #5a7fa6;
   color: #ffffff;
 }
-.cid-rxdRTuZkXx .socicon-bg-odnoklassniki {
+.cid-rxdUwR9XVj .socicon-bg-odnoklassniki {
   background: #f48420;
   color: #ffffff;
 }
-.cid-rxdRTuZkXx .socicon-bg-pinterest {
+.cid-rxdUwR9XVj .socicon-bg-pinterest {
   background: #c92619;
   color: #ffffff;
 }
-.cid-rxdRTuZkXx .socicon-bg-mail {
+.cid-rxdUwR9XVj .socicon-bg-mail {
   background: #134785;
   color: #ffffff;
 }
-.cid-rxdRTuZkXx .btn-social {
+.cid-rxdUwR9XVj .btn-social {
   border: none !important;
 }
-.cid-rxdRTuZkXx [class^="socicon-"]:before,
-.cid-rxdRTuZkXx [class*=" socicon-"]:before {
+.cid-rxdUwR9XVj [class^="socicon-"]:before,
+.cid-rxdUwR9XVj [class*=" socicon-"]:before {
   line-height: 44px;
 }
 @media (max-width: 767px) {
-  .cid-rxdRTuZkXx .btn {
+  .cid-rxdUwR9XVj .btn {
     font-size: 20px !important;
   }
 }
