--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3967,3 +3967,481 @@ body {
     font-size: 20px !important;
   }
 }
+.cid-rxk8G0GCYf .navbar {
+  padding: .5rem 0;
+  background: #333333;
+  transition: none;
+  min-height: 77px;
+}
+.cid-rxk8G0GCYf .navbar-dropdown.bg-color.transparent.opened {
+  background: #333333;
+}
+.cid-rxk8G0GCYf a {
+  font-style: normal;
+}
+.cid-rxk8G0GCYf .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-rxk8G0GCYf .nav-item a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+}
+.cid-rxk8G0GCYf .nav-item:focus,
+.cid-rxk8G0GCYf .nav-link:focus {
+  outline: none;
+}
+.cid-rxk8G0GCYf .btn {
+  padding: 0.4rem 1.5rem;
+  display: inline-flex;
+  align-items: center;
+}
+.cid-rxk8G0GCYf .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-rxk8G0GCYf .menu-logo {
+  margin-right: auto;
+}
+.cid-rxk8G0GCYf .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+}
+.cid-rxk8G0GCYf .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-rxk8G0GCYf .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-rxk8G0GCYf .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-rxk8G0GCYf .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-rxk8G0GCYf .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-rxk8G0GCYf .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-rxk8G0GCYf .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-rxk8G0GCYf .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-rxk8G0GCYf .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-rxk8G0GCYf .dropdown .dropdown-menu {
+  background: #333333;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-rxk8G0GCYf .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-rxk8G0GCYf .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-rxk8G0GCYf .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-rxk8G0GCYf .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-rxk8G0GCYf .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-rxk8G0GCYf .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-rxk8G0GCYf .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-rxk8G0GCYf .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-rxk8G0GCYf .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-rxk8G0GCYf .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-rxk8G0GCYf .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-rxk8G0GCYf button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-rxk8G0GCYf button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-rxk8G0GCYf button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-rxk8G0GCYf button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-rxk8G0GCYf button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rxk8G0GCYf button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rxk8G0GCYf button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-rxk8G0GCYf nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rxk8G0GCYf nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-rxk8G0GCYf nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-rxk8G0GCYf nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rxk8G0GCYf .collapsed.navbar-expand {
+  flex-direction: column;
+}
+.cid-rxk8G0GCYf .collapsed .btn {
+  display: flex;
+}
+.cid-rxk8G0GCYf .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-rxk8G0GCYf .collapsed .navbar-collapse.collapsing,
+.cid-rxk8G0GCYf .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-rxk8G0GCYf .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-rxk8G0GCYf .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-rxk8G0GCYf .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-rxk8G0GCYf .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-rxk8G0GCYf .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-rxk8G0GCYf .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-rxk8G0GCYf .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-rxk8G0GCYf .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-rxk8G0GCYf .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-rxk8G0GCYf .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-rxk8G0GCYf .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rxk8G0GCYf .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-rxk8G0GCYf .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-rxk8G0GCYf .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-rxk8G0GCYf .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-rxk8G0GCYf .navbar-expand {
+    flex-direction: column;
+  }
+  .cid-rxk8G0GCYf img {
+    height: 3.8rem !important;
+  }
+  .cid-rxk8G0GCYf .btn {
+    display: flex;
+  }
+  .cid-rxk8G0GCYf button.navbar-toggler {
+    display: block;
+  }
+  .cid-rxk8G0GCYf .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-rxk8G0GCYf .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rxk8G0GCYf .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-rxk8G0GCYf .navbar-collapse.collapsing,
+  .cid-rxk8G0GCYf .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-rxk8G0GCYf .navbar-collapse.collapsing .navbar-nav,
+  .cid-rxk8G0GCYf .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-rxk8G0GCYf .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-rxk8G0GCYf .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-rxk8G0GCYf .navbar-collapse.collapsing .navbar-buttons,
+  .cid-rxk8G0GCYf .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-rxk8G0GCYf .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-rxk8G0GCYf .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rxk8G0GCYf .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-rxk8G0GCYf .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-rxk8G0GCYf .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-rxk8G0GCYf .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-rxk8G0GCYf .menu-logo {
+    flex-shrink: 0;
+  }
+}
+.cid-rxk8G0GCYf .navbar-collapse {
+  flex-basis: auto;
+}
+.cid-rxk8G0GCYf .nav-link:hover,
+.cid-rxk8G0GCYf .dropdown-item:hover {
+  color: #c1c1c1 !important;
+}
+.cid-rxk8G1duuv {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-rxk8G1duuv P {
+  color: #767676;
+}
+.cid-rxk8G1IvvK {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rxk8G1IvvK .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-rxk8G1IvvK .number-wrap {
+  color: #4f4943;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-rxk8G1IvvK .number {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  text-transform: none;
+  letter-spacing: -2px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #232323;
+}
+.cid-rxk8G1IvvK .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-rxk8G1IvvK .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #232323;
+}
+.cid-rxk8G1IvvK .countdown-cont {
+  max-width: 700px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rxk8G1IvvK .dot {
+    display: none;
+  }
+}
+@media (max-width: 543px) {
+  .cid-rxk8G1IvvK .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-rxk8G1IvvK .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+    max-width: 25%;
+    flex: 0 0 25%;
+  }
+  .cid-rxk8G1IvvK .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-rxk8G1IvvK .number,
+  .cid-rxk8G1IvvK .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-rxk8G1IvvK .period {
+    font-size: 0.8rem;
+  }
+}
