--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3903,54 +3903,9 @@ body {
     padding-left: 30px;
   }
 }
-.cid-rxo5VgCLhZ {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
-}
-.cid-rxo5VgCLhZ .socicon-bg-facebook {
-  background: #3e5b98;
-  color: #ffffff;
-}
-.cid-rxo5VgCLhZ .socicon-bg-twitter {
-  background: #4da7de;
-  color: #ffffff;
-}
-.cid-rxo5VgCLhZ .socicon-bg-googleplus {
-  background: #dd4b39;
-  color: #ffffff;
-}
-.cid-rxo5VgCLhZ .socicon-bg-vkontakte {
-  background: #5a7fa6;
-  color: #ffffff;
-}
-.cid-rxo5VgCLhZ .socicon-bg-odnoklassniki {
-  background: #f48420;
-  color: #ffffff;
-}
-.cid-rxo5VgCLhZ .socicon-bg-pinterest {
-  background: #c92619;
-  color: #ffffff;
-}
-.cid-rxo5VgCLhZ .socicon-bg-mail {
-  background: #134785;
-  color: #ffffff;
-}
-.cid-rxo5VgCLhZ .btn-social {
-  border: none !important;
-}
-.cid-rxo5VgCLhZ [class^="socicon-"]:before,
-.cid-rxo5VgCLhZ [class*=" socicon-"]:before {
-  line-height: 44px;
-}
-@media (max-width: 767px) {
-  .cid-rxo5VgCLhZ .btn {
-    font-size: 20px !important;
-  }
-}
 .cid-rxo7ivF6G2 {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #ffffff;
 }
 .cid-rxo7ivF6G2 h4 {
@@ -3967,6 +3922,51 @@ body {
 }
 .cid-rxo7ivF6G2 .card-wrapper {
   height: 100%;
+}
+.cid-rxo7RPTkSo {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rxo7RPTkSo .socicon-bg-facebook {
+  background: #3e5b98;
+  color: #ffffff;
+}
+.cid-rxo7RPTkSo .socicon-bg-twitter {
+  background: #4da7de;
+  color: #ffffff;
+}
+.cid-rxo7RPTkSo .socicon-bg-googleplus {
+  background: #dd4b39;
+  color: #ffffff;
+}
+.cid-rxo7RPTkSo .socicon-bg-vkontakte {
+  background: #5a7fa6;
+  color: #ffffff;
+}
+.cid-rxo7RPTkSo .socicon-bg-odnoklassniki {
+  background: #f48420;
+  color: #ffffff;
+}
+.cid-rxo7RPTkSo .socicon-bg-pinterest {
+  background: #c92619;
+  color: #ffffff;
+}
+.cid-rxo7RPTkSo .socicon-bg-mail {
+  background: #134785;
+  color: #ffffff;
+}
+.cid-rxo7RPTkSo .btn-social {
+  border: none !important;
+}
+.cid-rxo7RPTkSo [class^="socicon-"]:before,
+.cid-rxo7RPTkSo [class*=" socicon-"]:before {
+  line-height: 44px;
+}
+@media (max-width: 767px) {
+  .cid-rxo7RPTkSo .btn {
+    font-size: 20px !important;
+  }
 }
 .cid-rxk8G0GCYf .navbar {
   padding: .5rem 0;
