--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4437,3 +4437,631 @@ body {
     font-size: 0.8rem;
   }
 }
+.cid-rxoflrJmUt .navbar {
+  padding: .5rem 0;
+  background: #333333;
+  transition: none;
+  min-height: 77px;
+}
+.cid-rxoflrJmUt .navbar-dropdown.bg-color.transparent.opened {
+  background: #333333;
+}
+.cid-rxoflrJmUt a {
+  font-style: normal;
+}
+.cid-rxoflrJmUt .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-rxoflrJmUt .nav-item a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+}
+.cid-rxoflrJmUt .nav-item:focus,
+.cid-rxoflrJmUt .nav-link:focus {
+  outline: none;
+}
+.cid-rxoflrJmUt .btn {
+  padding: 0.4rem 1.5rem;
+  display: inline-flex;
+  align-items: center;
+}
+.cid-rxoflrJmUt .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-rxoflrJmUt .menu-logo {
+  margin-right: auto;
+}
+.cid-rxoflrJmUt .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+}
+.cid-rxoflrJmUt .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-rxoflrJmUt .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-rxoflrJmUt .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-rxoflrJmUt .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-rxoflrJmUt .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-rxoflrJmUt .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-rxoflrJmUt .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-rxoflrJmUt .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-rxoflrJmUt .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-rxoflrJmUt .dropdown .dropdown-menu {
+  background: #333333;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-rxoflrJmUt .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-rxoflrJmUt .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-rxoflrJmUt .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-rxoflrJmUt .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-rxoflrJmUt .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-rxoflrJmUt .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-rxoflrJmUt .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-rxoflrJmUt .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-rxoflrJmUt .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-rxoflrJmUt .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-rxoflrJmUt .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-rxoflrJmUt button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-rxoflrJmUt button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-rxoflrJmUt button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-rxoflrJmUt button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-rxoflrJmUt button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rxoflrJmUt button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rxoflrJmUt button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-rxoflrJmUt nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rxoflrJmUt nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-rxoflrJmUt nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-rxoflrJmUt nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rxoflrJmUt .collapsed.navbar-expand {
+  flex-direction: column;
+}
+.cid-rxoflrJmUt .collapsed .btn {
+  display: flex;
+}
+.cid-rxoflrJmUt .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-rxoflrJmUt .collapsed .navbar-collapse.collapsing,
+.cid-rxoflrJmUt .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-rxoflrJmUt .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-rxoflrJmUt .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-rxoflrJmUt .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-rxoflrJmUt .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-rxoflrJmUt .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-rxoflrJmUt .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-rxoflrJmUt .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-rxoflrJmUt .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-rxoflrJmUt .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-rxoflrJmUt .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-rxoflrJmUt .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rxoflrJmUt .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-rxoflrJmUt .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-rxoflrJmUt .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-rxoflrJmUt .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-rxoflrJmUt .navbar-expand {
+    flex-direction: column;
+  }
+  .cid-rxoflrJmUt img {
+    height: 3.8rem !important;
+  }
+  .cid-rxoflrJmUt .btn {
+    display: flex;
+  }
+  .cid-rxoflrJmUt button.navbar-toggler {
+    display: block;
+  }
+  .cid-rxoflrJmUt .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-rxoflrJmUt .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rxoflrJmUt .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-rxoflrJmUt .navbar-collapse.collapsing,
+  .cid-rxoflrJmUt .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-rxoflrJmUt .navbar-collapse.collapsing .navbar-nav,
+  .cid-rxoflrJmUt .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-rxoflrJmUt .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-rxoflrJmUt .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-rxoflrJmUt .navbar-collapse.collapsing .navbar-buttons,
+  .cid-rxoflrJmUt .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-rxoflrJmUt .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-rxoflrJmUt .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rxoflrJmUt .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-rxoflrJmUt .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-rxoflrJmUt .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-rxoflrJmUt .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-rxoflrJmUt .menu-logo {
+    flex-shrink: 0;
+  }
+}
+.cid-rxoflrJmUt .navbar-collapse {
+  flex-basis: auto;
+}
+.cid-rxoflrJmUt .nav-link:hover,
+.cid-rxoflrJmUt .dropdown-item:hover {
+  color: #c1c1c1 !important;
+}
+.cid-rxoflshlYe {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-rxoflshlYe P {
+  color: #767676;
+}
+.cid-rxoflt2jr9 {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rxoflt2jr9 .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-rxoflt2jr9 .number-wrap {
+  color: #4f4943;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-rxoflt2jr9 .number {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  text-transform: none;
+  letter-spacing: -2px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #232323;
+}
+.cid-rxoflt2jr9 .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-rxoflt2jr9 .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #232323;
+}
+.cid-rxoflt2jr9 .countdown-cont {
+  max-width: 700px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rxoflt2jr9 .dot {
+    display: none;
+  }
+}
+@media (max-width: 543px) {
+  .cid-rxoflt2jr9 .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-rxoflt2jr9 .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+    max-width: 25%;
+    flex: 0 0 25%;
+  }
+  .cid-rxoflt2jr9 .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-rxoflt2jr9 .number,
+  .cid-rxoflt2jr9 .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-rxoflt2jr9 .period {
+    font-size: 0.8rem;
+  }
+}
+.cid-rxofltLrh0 {
+  background: #ffffff;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+.cid-rxofltLrh0 .video-block {
+  margin: auto;
+}
+@media (max-width: 768px) {
+  .cid-rxofltLrh0 .video-block {
+    width: 100% !important;
+  }
+}
+.cid-rxoflukVdN {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-rxoflukVdN .mbr-iconfont {
+  font-size: 48px;
+  padding-right: 1rem;
+}
+.cid-rxoflukVdN .icon-block {
+  margin-bottom: 10px;
+}
+.cid-rxoflukVdN .icon-block .icon-block__icon {
+  display: inline-block;
+  vertical-align: middle;
+}
+.cid-rxoflukVdN .icon-block .icon-block__title {
+  display: inline-block;
+  vertical-align: middle;
+  margin-bottom: 0;
+  line-height: 1;
+  font-style: italic;
+}
+.cid-rxoflukVdN .mbr-text {
+  color: #767676;
+}
+.cid-rxoflukVdN textarea.form-control {
+  min-height: 100px;
+}
+.cid-rxoflukVdN a:not([href]):not([tabindex]) {
+  color: #fff;
+  border-radius: 3px;
+}
+.cid-rxoflukVdN .google-map {
+  height: 33rem;
+  position: relative;
+}
+.cid-rxoflukVdN .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-rxoflukVdN .google-map [data-state-details] {
+  color: #6b6763;
+  font-family: Montserrat;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-rxoflukVdN .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-rxoflukVdN .google-map[data-state="loading"] [data-state-details] {
+  display: none;
+}
+@media (max-width: 767px) {
+  .cid-rxoflukVdN h2 {
+    padding-top: 2rem;
+  }
+}
+@media (min-width: 768px) {
+  .cid-rxoflukVdN .container > .row > .col-md-6:first-child {
+    padding-right: 30px;
+  }
+  .cid-rxoflukVdN .container > .row > .col-md-6:last-child {
+    padding-left: 30px;
+  }
+}
+.cid-rxoflvzNIw {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rxoflvzNIw h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-rxoflvzNIw p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rxoflvzNIw .card-box {
+  padding-top: 2rem;
+}
+.cid-rxoflvzNIw .card-wrapper {
+  height: 100%;
+}
+.cid-rxoflwJfKc {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rxoflwJfKc .socicon-bg-facebook {
+  background: #3e5b98;
+  color: #ffffff;
+}
+.cid-rxoflwJfKc .socicon-bg-twitter {
+  background: #4da7de;
+  color: #ffffff;
+}
+.cid-rxoflwJfKc .socicon-bg-googleplus {
+  background: #dd4b39;
+  color: #ffffff;
+}
+.cid-rxoflwJfKc .socicon-bg-vkontakte {
+  background: #5a7fa6;
+  color: #ffffff;
+}
+.cid-rxoflwJfKc .socicon-bg-odnoklassniki {
+  background: #f48420;
+  color: #ffffff;
+}
+.cid-rxoflwJfKc .socicon-bg-pinterest {
+  background: #c92619;
+  color: #ffffff;
+}
+.cid-rxoflwJfKc .socicon-bg-mail {
+  background: #134785;
+  color: #ffffff;
+}
+.cid-rxoflwJfKc .btn-social {
+  border: none !important;
+}
+.cid-rxoflwJfKc [class^="socicon-"]:before,
+.cid-rxoflwJfKc [class*=" socicon-"]:before {
+  line-height: 44px;
+}
+@media (max-width: 767px) {
+  .cid-rxoflwJfKc .btn {
+    font-size: 20px !important;
+  }
+}
