--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -711,9 +711,9 @@ section.lazy-placeholder:after {
   opacity: 0.3;
 }
 .cid-rWovvqv2Ld {
-  padding-top: 90px;
+  padding-top: 105px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/background4.jpg");
+  background-color: #232323;
 }
 .cid-rWovvqv2Ld h4 {
   font-weight: 500;
@@ -728,7 +728,7 @@ section.lazy-placeholder:after {
 .cid-rWovvqv2Ld .card-img {
   border-radius: 0;
   padding: 2rem 2rem 0 2rem;
-  background-color: #149dcc;
+  background-color: #cc2952;
 }
 .cid-rWovvqv2Ld .card-img span {
   font-size: 100px;
@@ -736,8 +736,8 @@ section.lazy-placeholder:after {
 }
 .cid-rWovvqv2Ld .card-box {
   padding-bottom: 2rem;
-  background-color: #149dcc;
-  background: linear-gradient(#149dcc, transparent);
+  background-color: #cc2952;
+  background: linear-gradient(#cc2952, transparent);
 }
 .cid-rWovvqv2Ld .card-box .card-title {
   margin: 0;
@@ -751,94 +751,6 @@ section.lazy-placeholder:after {
   padding-top: 1rem;
 }
 .cid-rWovvqv2Ld .card-box .mbr-section-btn a {
-  margin-top: 1rem;
-  margin-bottom: 0;
-}
-.cid-rWovw8DHa1 {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-image: url("../../../assets/images/background4.jpg");
-}
-.cid-rWovw8DHa1 h4 {
-  font-weight: 500;
-  color: #ffffff;
-}
-.cid-rWovw8DHa1 p {
-  color: #ffffff;
-}
-.cid-rWovw8DHa1 .card {
-  margin-bottom: 2rem;
-}
-.cid-rWovw8DHa1 .card-img {
-  border-radius: 0;
-  padding: 2rem 2rem 0 2rem;
-  background-color: #149dcc;
-}
-.cid-rWovw8DHa1 .card-img span {
-  font-size: 100px;
-  color: #ffffff;
-}
-.cid-rWovw8DHa1 .card-box {
-  padding-bottom: 2rem;
-  background-color: #149dcc;
-  background: linear-gradient(#149dcc, transparent);
-}
-.cid-rWovw8DHa1 .card-box .card-title {
-  margin: 0;
-  padding: 2rem 2rem 0 2rem;
-}
-.cid-rWovw8DHa1 .card-box .mbr-text {
-  margin-bottom: 0;
-  padding: 2rem 2rem 0 2rem;
-}
-.cid-rWovw8DHa1 .card-box .mbr-section-btn {
-  padding-top: 1rem;
-}
-.cid-rWovw8DHa1 .card-box .mbr-section-btn a {
-  margin-top: 1rem;
-  margin-bottom: 0;
-}
-.cid-rWovwPGxLt {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-image: url("../../../assets/images/background4.jpg");
-}
-.cid-rWovwPGxLt h4 {
-  font-weight: 500;
-  color: #ffffff;
-}
-.cid-rWovwPGxLt p {
-  color: #ffffff;
-}
-.cid-rWovwPGxLt .card {
-  margin-bottom: 2rem;
-}
-.cid-rWovwPGxLt .card-img {
-  border-radius: 0;
-  padding: 2rem 2rem 0 2rem;
-  background-color: #149dcc;
-}
-.cid-rWovwPGxLt .card-img span {
-  font-size: 100px;
-  color: #ffffff;
-}
-.cid-rWovwPGxLt .card-box {
-  padding-bottom: 2rem;
-  background-color: #149dcc;
-  background: linear-gradient(#149dcc, transparent);
-}
-.cid-rWovwPGxLt .card-box .card-title {
-  margin: 0;
-  padding: 2rem 2rem 0 2rem;
-}
-.cid-rWovwPGxLt .card-box .mbr-text {
-  margin-bottom: 0;
-  padding: 2rem 2rem 0 2rem;
-}
-.cid-rWovwPGxLt .card-box .mbr-section-btn {
-  padding-top: 1rem;
-}
-.cid-rWovwPGxLt .card-box .mbr-section-btn a {
   margin-top: 1rem;
   margin-bottom: 0;
 }
