--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -728,7 +728,7 @@ section.lazy-placeholder:after {
 .cid-rWovvqv2Ld .card-img {
   border-radius: 0;
   padding: 2rem 2rem 0 2rem;
-  background-color: #7f1933;
+  background-color: #073b4c;
 }
 .cid-rWovvqv2Ld .card-img span {
   font-size: 100px;
@@ -736,8 +736,8 @@ section.lazy-placeholder:after {
 }
 .cid-rWovvqv2Ld .card-box {
   padding-bottom: 2rem;
-  background-color: #7f1933;
-  background: linear-gradient(#7f1933, transparent);
+  background-color: #073b4c;
+  background: linear-gradient(#073b4c, transparent);
 }
 .cid-rWovvqv2Ld .card-box .card-title {
   margin: 0;
@@ -772,7 +772,7 @@ section.lazy-placeholder:after {
 .cid-rWpz06R1xy .card-img {
   border-radius: 0;
   padding: 2rem 2rem 0 2rem;
-  background-color: #7f1933;
+  background-color: #073b4c;
 }
 .cid-rWpz06R1xy .card-img span {
   font-size: 100px;
@@ -780,8 +780,8 @@ section.lazy-placeholder:after {
 }
 .cid-rWpz06R1xy .card-box {
   padding-bottom: 2rem;
-  background-color: #7f1933;
-  background: linear-gradient(#7f1933, transparent);
+  background-color: #073b4c;
+  background: linear-gradient(#073b4c, transparent);
 }
 .cid-rWpz06R1xy .card-box .card-title {
   margin: 0;
