--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -798,6 +798,50 @@ section.lazy-placeholder:after {
   margin-top: 1rem;
   margin-bottom: 0;
 }
+.cid-rWpLS1VsFk {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-rWpLS1VsFk h4 {
+  font-weight: 500;
+  color: #ffffff;
+}
+.cid-rWpLS1VsFk p {
+  color: #ffffff;
+}
+.cid-rWpLS1VsFk .card {
+  margin-bottom: 2rem;
+}
+.cid-rWpLS1VsFk .card-img {
+  border-radius: 0;
+  padding: 2rem 2rem 0 2rem;
+  background-color: #232323;
+}
+.cid-rWpLS1VsFk .card-img span {
+  font-size: 100px;
+  color: #ffffff;
+}
+.cid-rWpLS1VsFk .card-box {
+  padding-bottom: 2rem;
+  background-color: #232323;
+  background: linear-gradient(#232323, transparent);
+}
+.cid-rWpLS1VsFk .card-box .card-title {
+  margin: 0;
+  padding: 2rem 2rem 0 2rem;
+}
+.cid-rWpLS1VsFk .card-box .mbr-text {
+  margin-bottom: 0;
+  padding: 2rem 2rem 0 2rem;
+}
+.cid-rWpLS1VsFk .card-box .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-rWpLS1VsFk .card-box .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
 .cid-rW0s6fvjHf {
   background: #149dcc;
   padding-top: 60px;
